correct text on index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
 <% end %>
 
 
-<h3>Here are all the movies in this database:</h3>
+<h3>Here are all the cities in our database:</h3>
 
 <% if @cities.any?() %>
   <p>Click on a city to see information about it:</p>
