--- a/views/cities.erb
+++ b/views/cities.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to the city page</h1>
 
-<p>Add an city to the database:</p>
+<p>Add a city to the database:</p>
 
 <form action="/cities" method="post">
   <label for="name">City name:</label>
