--- a/views/train_info.erb
+++ b/views/train_info.erb
@@ -2,23 +2,6 @@
 
 <h3>Add city stops to this train:</h3>
 
-<% if @cities.any?() %>
-  <form action="/trains/<%= @train.id %>" method="post">
-    <input type="hidden" name="_method" value="patch">
-
-    <% @cities.each() do |city| %>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" name="city_ids[]" value="<%= city.id() %>"><%= city.name() %>
-        </label>
-      </div>
-    <% end %>
-
-    <button type="submit">Add cities</button>
-  </form>
-<% end %>
-
-
 <% if @train.cities().any?() %>
   <h3>Here are all the cities this train stops at:</h3>
 
@@ -26,10 +9,10 @@
     <% @train.cities().each() do |city| %>
       <li><a href="/city_times/<%= city.id() %>"><%= city.name() %></a></li>
     <% end %>
-  </ul>
-<% else %>
+  </ul> -->
+    <% else %>
   <p>There are no cities yet!</p>
 <% end %>
 
 
-<a href="/">Return to Main Page</a>
+<a href="/">Return to Main Page</a> -->
